--- a/icss.css
+++ b/icss.css
@@ -27,7 +27,7 @@
 	align-content: center;
 }
 
-li{margin: 5px;}
+li{margin: 5px 0px;}
 
 #signup{	
 	margin: 10% auto 10% auto;
@@ -77,22 +77,22 @@ h3{
 @media screen and (max-width: 600px) {
 	#timer{
 	margin: 30px 0;
-	font-size: 1.5em;
+	font-size: 1.2em;
 }
   
  h1{	
-	font-size: 2.5em;
+	font-size: 3em;
 	font-weight: 900;
 }
 h3{	
 	
-	font-size: 1em;
+	font-size: 1.2em;
 	font-weight: 700;
 }
   .content{
 
   	max-width: 90%;
-  	margin: 20% 5%;
+  	margin: 30% 5%;
   }
   #signup{
   	width: 70%;
